# radar

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: scheduled_tasks.json  settings.json
docs/: adding-sources.md  autonomous-features.md  customization.md  setup.md  state-management.md
radar/: __init__.py
radar-engine/: __init__.py  __main__.py  main.py
radar_memory/: __main__.py  catalog_sync.py  contrarian.py  evalgrade.py  lineage.py  migrate.py  registry.py  resolver.py
scripts/: fetch_sources.py
sources/: _groups.yaml  ai-funding-tracker.yaml  anthropic-blog.yaml  arstechnica.yaml  asian-vc-flows.yaml  changelog.yaml  conference-intelligence.yaml  crunchbase.yaml  dev-community.yaml  devto-ai.yaml  devto-claude.yaml  devto-devops.yaml  devto-docs.yaml  devto-llm.yaml  devto-productivity.yaml  devto-tutorial.yaml  github-blog.yaml  github-trending.yaml  hn-algolia.yaml  hn-beat.yaml  hn-hiring.yaml  hn-show.yaml  idratherbewriting.yaml  import-ai.yaml  infoworld.yaml  julia-evans.yaml  lastweek-ai.yaml  lennys-newsletter.yaml  lobsters-ai.yaml  mit-tech-review.yaml  oneusefulthing.yaml  platformer.yaml  pragmatic-engineer.yaml  producthunt.yaml  rise-of-ai-europe.yaml  simon-willison.yaml  stackoverflow-ai.yaml  techcrunch.yaml  thought-leaders.yaml  verge-ai.yaml
state/: act-now-predictions.jsonl  autonomous-loops.json  catalog.md  feedback.md  inflection-watch.md  market-sentiment.md  predictions.jsonl  profile.md  signal-bank.jsonl  signals.jsonl  (+3 more)
(+83 files in other folders)
