[project]
name = "radar"
version = "0.1.0"
description = "Personal capability & opportunity intelligence system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",         # Async HTTP client
    "pydantic>=2.9.0",       # Configuration & validation
    "pydantic-settings>=2.5.0",  # Environment config
    "python-dateutil>=2.9.0",    # Date handling
    "pyyaml>=6.0.2",         # Source configuration
    "tenacity>=9.0.0",       # Retry logic
    "rich>=13.9.0",          # CLI formatting
    "typer>=0.12.0",         # CLI framework
    "feedparser>=6.0.11",   # RSS/Atom feed parsing
    "beautifulsoup4>=4.12.0",  # HTML parsing for web scraping
    "lxml>=4.9.0",          # Fast XML parser for BeautifulSoup
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx[dev]>=0.27.0",    # MockTransport for testing
    "ruff>=0.6.0",           # Linting/formatting
]

[project.scripts]
radar = "radar.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "RUF"]